# sql

./: README.md  sql.cabal  stack.yaml
src/: Lib.hs  Lists.hs  Tuples.hs  Validations.hs
